--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(platformer)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(platformer main.cpp Body.cpp)
+add_executable(platformer main.cpp)
 target_compile_options(platformer PRIVATE -Werror -Wall -Wextra -Wpedantic)
 
 target_link_libraries(platformer PRIVATE sfml-graphics)
